layouts and partials in views added and static script and css also added

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> <%= title %></title>
-</head>
-<body>
-    <h1> Profile / <%= title %> </h1>
-</body>
-</html>
+
+<link rel="stylesheet" href="/CSS/user_profile.css">
+
+    <h1>User Profile Page / <%= title %>
+    </h1>
+
+<script src="/JS/user_profile.js"></script>
