Passport authentication added , style using SASS added , Posts and Comments also added

--- a/assets/CSS/layout.css
+++ b/assets/CSS/layout.css
@@ -1,4 +1,18 @@
-body{
-    margin:0;
-    text-align: center;
+body {
+  margin: 0;
+  text-align: center;
 }
+
+a {
+  text-decoration: none;
+}
+
+.post-card {
+  background-color: bisque;
+}
+
+.comment-card {
+  background-color: palevioletred;
+}
+
+/*# sourceMappingURL=layout.css.map */
