--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,9 @@
 
     <%- include('_header'); %> <!--partial in views -->
 
-    <%- body %> <!--using layouts in views -->
+    <main id="layout-main">
+        <%- body %> <!--using layouts in views -->
+    </main>
 
     <%- include('_footer'); %>
 
