--- a/assets/CSS/user_profile.css
+++ b/assets/CSS/user_profile.css
@@ -1,3 +1,5 @@
-body{
-    background-color: aquamarine;
+body {
+  background-color: aquamarine;
 }
+
+/*# sourceMappingURL=user_profile.css.map */
