--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="/CSS/footer.css">
+
 <footer>
-    Page Footer
+    <div class="bottom-left">
+        <p>© Coding Ninjas. All Rights Reserved</p>
+        <a href="/">HOME</a>
+    </div>
 </footer>
