--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,20 @@
+<link rel="stylesheet" href="/CSS/header.css">
+
 <header>
-    Page Header
+    <b>Codeial</b>
+    <% if (locals.user){ %>
+        <div class="top-right">
+            <a href="/">HOME</a>
+            <a href="/users/profile"><%= user.name %></a>
+            <a href="/users/sign-out">Sign Out</a>
+        </div>
+    <% }else{ %>
+        <div class="top-right">
+            <a href="/">HOME</a>
+            <a href="/users/sign-in">Sign in</a>
+            <a href="/users/sign-up">Sign UP</a>
+        </div>
+    <% } %>
+        
+    
 </header>
