--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,30 @@
 
 
-    <h1>Codeial / <%= title %>
-    </h1>
+<h1>Codeial / <%= title %></h1>
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <% if (locals.user) { %>
+        <form action="/posts/create" id="new-post-form" method="post">
+            <textarea name="content" cols="30" rows="3" placeholder="Type here..." required></textarea>
+            <input type="submit" value="Post">
+        </form>
+    <%}%>
+    <div id="post-holder">
+        <% for (i of Post) { %> 
+            
+            <%- include('_post') -%>
+
+        <% } %>
+    </div>
+</section>
+
+<section id="user-friends">
+    <h4>Friends</h4>
+    <% for (u of all_users) { %>
+        <p><a href="/users/profile/<%= u.id %>"><%= u.name %></a></p>
+    <%}%>
+</section>
 
 
     
